# merged_board_test1

./: partitions.csv  sdkconfig  sdkconfig.old
audio_test/: CMakeLists.txt  board.c  board.h  idf_component.yml  main.c
main/: CMakeLists.txt  Kconfig  README.md  board.c  board.h  idf_component.yml  index.html  main.c
main/pcm/: 1.pcm  2.pcm  3.pcm  4.pcm
play_test/: esp32_s3_szp.c  esp32_s3_szp.h  idf_component.yml  main.c
websocket_test/: CMakeLists.txt  README.md
websocket_test/main/: CMakeLists.txt  board.h  idf_component.yml  main.c  server.java
